--- a/css/estils.css
+++ b/css/estils.css
@@ -74,13 +74,16 @@ p {
 }
 
 #carrito{
+    display: flex;
+    flex-direction: column;
+    justify-items: end;
     margin: .5rem 0;
+   
 }
 
-#carrito div{
+#carrito span{
     /* width: 400px; */
     font-size: 1rem;
-    margin: 0 auto;
     line-height: 2.5rem;
     text-align: right;
     /* padding-left: 10rem; */
